tests/undefined/undefined.exp
Error --------------------------------------------------------- undefined.js:3:7

Cannot call `x.foo` because property `foo` is missing in uninitialized
variable [1].


Error -------------------------------------------------------- undefined2.js:7:6

Cannot cast `name` to boolean because:
 - string [1] is incompatible with boolean [2].
 - undefined [3] is incompatible with boolean [2].


Error ------------------------------------------------------- undefined2.js:13:6

Cannot cast `bar[x]` to boolean because:
 - string [1] is incompatible with boolean [2].
 - undefined [3] is incompatible with boolean [2].


Error ------------------------------------------------------- undefined2.js:22:7

Cannot get `x[0]` because an indexer property is missing in `Number` [1].


Error ------------------------------------------------------- undefined2.js:29:6

Cannot cast `bar[x]` to boolean because:
 - string [1] is incompatible with boolean [2].
 - string [3] is incompatible with boolean [2].



Found 8 errors
